configurationengine/source/scripts/tests/testdata/validate/project/assets/invalid/confml/invalid_element.confml
<?xml version="1.0" encoding="UTF-8"?>
<confml:configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                      xmlns:confml="http://www.s60.com/xml/confml/2"
                      xsi:schemaLocation="http://www.s60.com/xml/confml/2 http://www.s60.com/xml/confml/1#//confml2"
                      name="Invalid element test">
  <confml:feature ref="InvalidElementTest" name="Invalid element test">
    <confml:setting ref="TestSetting" name="Test setting" type="string">
        <confml:foo value="bar"/>
    </confml:setting>
  </confml:feature>
  <confml:data>
    <confml:InvalidElementTest>
      <confml:TestSetting>test</confml:TestSetting>
    </confml:InvalidElementTest>
  </confml:data>
</confml:configuration>
